<resources>
    <string name="app_name">Do DMS</string>
    <string name="sort_ascending">Sort Ascending</string>
    <string name="sort_descending">Sort Descending</string>
    <string name="hiding_row_sample">Hiding 3. Row Sample</string>
    <string name="showing_row_sample">Showing 3. Row Sample</string>
    <string name="scroll_to_column_position">Scroll to 15. column position</string>
    <string name="scroll_to_row_position">Scroll to 5. row position</string>
    <string name="show_hide_the_column">Showing / Hiding 1. column</string>
    <string-array name="moods">
        <item />
        <item>Happy</item>
        <item>Sad</item>
    </string-array>
    <string-array name="gender">
        <item />
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="items_per_page">
        <item>10</item>
        <item>20</item>
        <item>25</item>
        <item>50</item>
        <item>All</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <string name="str_hello_user">Hello, %1$s</string>
    <string name="enter">Enter</string>
    <string name="str_email">Email Address</string>
    <string name="str_enter_email">Enter Email Address</string>
    <string name="str_password">Password</string>
    <string name="str_enter_password">Enter Password</string>
    <string name="str_login">Login</string>
    <string name="str_language">Language</string>
    <string name="str_server">Server: %1$s</string>
    <string name="str_home">Home</string>
    <string name="str_back">Back</string>
    <string name="str_visit_customer">Visit Customer</string>
    <string name="str_sales_order">Sales Order</string>
    <string name="str_location">Location</string>
    <string name="str_time_keeping">Timekeeping</string>
    <string name="str_item_master">Item Master</string>
    <string name="str_sale_price_promotion">Sales Price &amp; Promotion</string>
    <string name="str_customer">Customer</string>
    <string name="str_customer_detail">Customer Detail</string>
    <string name="str_tracking_report">Tracking Reports</string>
    <string name="str_report">Report</string>
    <string name="str_personal_report">Personal Report</string>
    <string name="str_phone">Phone Number</string>
    <string name="str_phone_2">Phone Number 2</string>
    <string name="str_phone_manda"><font color='#FF0000'>*</font>Phone</string>
    <string name="str_setting">Settings</string>
    <string name="str_add">Add</string>
    <string name="str_check_in">Check in</string>
    <string name="str_sales">Sales</string>
    <string name="str_visited">Visited</string>
    <string name="str_not_visited">Not Visited</string>
    <string name="str_select_server_login">Select Server Login</string>
    <string name="str_select_language">Select Language</string>
    <string name="str_vietnamese">Tiếng Việt</string>
    <string name="str_english">English</string>
    <string name="str_language_value">English</string>
    <string name="str_opening">Opening</string>
    <string name="str_confirm">Confirmed</string>
    <string name="str_issued">Issued</string>
    <string name="str_stop">Stopped</string>
    <string name="str_activated">Activated</string>
    <string name="str_stopped">Stopped</string>
    <string name="str_deactivated">Deactivated</string>
    <string name="str_sold_by">Sold by: %1$s</string>
    <string name="str_last_visited">Last visited</string>
    <string name="str_last_sold">Last sold</string>
    <string name="str_not_available">Not Available</string>
    <string name="str_not_found_data">Not Found Query Data</string>
    <string name="text_filter_condition">Filter Condition</string>
    <string name="str_delete">Delete</string>
    <string name="str_take_picture">Take a picture</string>
    <string name="str_take_note">Take a note</string>
    <string name="str_more">More</string>
    <string name="str_detail">Detail</string>
    <string name="str_related">Related</string>
    <string name="str_general_info">General Information</string>
    <string name="str_addition_info">Addition Information</string>
    <string name="str_address">Address</string>
    <string name="str_customer_description">Customer Description</string>
    <string name="str_customer_name">Customer name</string>
    <string name="str_enter_customer_name">Enter Customer name</string>
    <string name="str_customer_no">Customer no</string>
    <string name="str_enter_customer_no">Enter Customer no</string>
    <string name="str_customer_code">Customer code</string>
    <string name="str_customer_type">Customer Type</string>
    <string name="str_usage_status">Usage Status</string>
    <string name="str_enter_customer_type">Enter Customer Type</string>
    <string name="str_customer_class">Customer Classification</string>
    <string name="str_fax">Fax No</string>
    <string name="str_website">Website</string>
    <string name="str_representation">Representation Person</string>
    <string name="str_license">Business License No</string>
    <string name="str_tax">Tax code</string>
    <string name="str_tax_rate">Tax Rate</string>
    <string name="str_owner">Customer Owner</string>
    <string name="str_customer_group">Customer group %1$s</string>
    <string name="str_customer_group_1">Customer group 1</string>
    <string name="str_customer_group_2">Customer group 2</string>
    <string name="str_customer_group_3">Customer group 3</string>
    <string name="str_customer_group_4">Customer group 4</string>
    <string name="str_group">Customer Group</string>
    <string name="str_item_group">Item group %1$s</string>
    <string name="str_item_grade">Item grade</string>
    <string name="str_street">Street</string>
    <string name="str_district">District</string>
    <string name="str_province">City</string>
    <string name="str_country">Country</string>
    <string name="str_remark">Remark</string>
    <string name="str_remark_for_item">Remark For Item</string>
    <string name="str_route">Routes</string>
    <string name="str_images">Images</string>
    <string name="str_notes">Notes</string>
    <string name="str_item_category">Item Category</string>
    <string name="str_item_brand_info">Item Brand</string>
    <string name="str_item_brand">Item Brand</string>
    <string name="str_item_model">Item Model</string>
    <string name="str_vendor">Vendor Name</string>
    <string name="str_stock_unit">Stock Unit</string>
    <string name="str_sale_unit">Sales Std. Unit</string>
    <string name="str_convolution_quality">Conv. Qty</string>
    <string name="str_sale_price">Sale Price</string>
    <string name="str_vat">VAT</string>
    <string name="str_origin">Origin</string>
    <string name="str_item_spec">Item Spec</string>
    <string name="str_route_of">Routes of %1$s</string>
    <string name="str_note_of">Notes of %1$s</string>
    <string name="str_image_of">Images of %1$s</string>
    <string name="str_visit_day">Visit day(s): %1$s</string>
    <string name="str_done">Done</string>
    <string name="str_edit">Edit</string>
    <string name="str_save">Save</string>
    <string name="str_note_detail">Note detail</string>
    <string name="str_note_modify">Note Modify</string>
    <string name="str_create_note">Create a note</string>
    <string name="str_last_modifier">Last modifier</string>
    <string name="str_note_content">Note content</string>
    <string name="str_note_title">Note title</string>
    <string name="str_related_object">Related Object</string>
    <string name="str_question_delete">Do you want to delete ?</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_apply">Apply</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_empty">There is no available item</string>
    <string name="str_stock_count">Stock Count</string>
    <string name="str_presentation">Presentation</string>
    <string name="str_add_items">Add Items</string>
    <string name="str_count_item">Count Item</string>
    <string name="str_check_out">Check Out</string>
    <string name="str_get_location">Get Location</string>
    <string name="str_no_stock_count_data">Not exists stock count data</string>
    <string name="str_no_sale_order">Not exists Sales Order</string>
    <string name="str_no_image">Not exists Image</string>
    <string name="str_new_customer">New Customer</string>
    <string name="str_description_hint">Description about this customer</string>
    <string name="str_item_count">Item No</string>
    <string name="str_select_item">Select Item</string>
    <string name="str_count_unit">Count Unit</string>
    <string name="str_count_unit_normal">Count Unit</string>
    <string name="str_select_count_unit">Select Count Unit</string>
    <string name="str_count_quantity">Count Quantity</string>
    <string name="str_enter_quantity_of_item">Enter Quantity of Item</string>
    <string name="str_count_quantity_wu">Count Quantity (Warehouse Unit)</string>
    <string name="str_lot_serial_no">Lot/Serial No.</string>
    <string name="str_lot_serial">Lot/Serial</string>
    <string name="str_lot_serial_control">Lot/Serial Control</string>
    <string name="str_enter_lot_serial_no">Enter Lot/Serial No. of Item</string>
    <string name="str_make_date">Make Date</string>
    <string name="str_enter_make_date">Enter Make Date of Item</string>
    <string name="str_expiry_date">Expiry Date</string>
    <string name="str_expiry_duration">Expiry Duration</string>
    <string name="str_enter_expiry_date">Enter Expiry Date of Item</string>
    <string name="str_remark_of_item">Remark of Item</string>
    <string name="str_item_stock_count">Item Stock Count</string>
    <string name="str_update_stock_count">Update Stock Count</string>
    <string name="str_confirm_order">Confirm Order</string>
    <string name="str_unapply_promo">UnApply Promo</string>
    <string name="str_issue_handling">Issue Handling</string>
    <string name="str_get_gift">Get Gift</string>
    <string name="str_last_price">Tổng tiền</string>
    <string name="str_salesman">Salesman</string>
    <string name="str_contact">Contact</string>
    <string name="str_common_info">Common Info.</string>
    <string name="str_items">Items</string>
    <string name="str_order_items">Order Items</string>
    <string name="str_order_date">Order Date</string>
    <string name="str_gifts">Gifts</string>
    <string name="str_sales_department">Sales Department</string>
    <string name="str_sales_channel">Sales Channel</string>
    <string name="str_prepaid_amount">Prepaid Amount</string>
    <string name="str_prepaid_rate">Prepaid Rate</string>
    <string name="str_payment_term">Payment Term</string>
    <string name="str_sales_unit">Sales Unit</string>
    <string name="str_select_sales_unit">Select Sales Unit</string>
    <string name="str_discount_by_rate">Discount By Rate</string>
    <string name="str_discount_by_amount">Discount By Amount</string>
    <string name="str_discount_rate">Discount Rate (%)</string>
    <string name="str_enter_discount_rate">Enter Discount Rate</string>
    <string name="str_discount_amount">Discount Amount</string>
    <string name="str_total_amount">Total Amount</string>
    <string name="str_enter_discount_amount">Enter Discount Amount</string>
    <string name="str_warehouse">Warehouse</string>
    <string name="str_select_warehouse">Select Warehouse</string>
    <string name="str_sales_quantity">Sales Quantity</string>
    <string name="str_select_sales_quantity">Select Sales Quantity</string>
    <string name="str_unit_price">Unit Price</string>
    <string name="str_select_unit_price">Select Unit Price</string>
    <string name="str_item_sales">Item sales</string>
    <string name="str_gender">Gender</string>
    <string name="str_birthday_establish">Birthday - Establish day</string>
</resources>