<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimary"
        android:fitsSystemWindows="true"
        android:minHeight="?actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:navigationIcon="@drawable/ic_action_back">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/tv_information"
                layout="@layout/item_detail_header"/>
            <com.ziperp.dms.common.model.EditView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:title="@string/str_customer_name"
                app:isMandatory="true"
                app:hint="@string/str_enter_customer_name"
                />
            <com.ziperp.dms.common.model.EditView
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:title="@string/str_customer_no"
                app:hint="@string/str_enter_customer_no"
                />
            <com.ziperp.dms.common.model.EditView
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:title="@string/str_customer_type"
                app:isMandatory="true"
                app:hint="@string/str_enter_customer_type"
                />
            <com.ziperp.dms.common.model.EditView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:title="@string/str_phone"
                app:isMandatory="true"
                app:hint="@string/str_phone"
                app:isPhoneInput="true"
                />
            <com.ziperp.dms.common.model.EditView
                android:id="@+id/phone2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:title="@string/str_phone_2"
                app:hint="@string/str_phone_2"
                app:isPhoneInput="true"
                />
            <com.ziperp.dms.common.model.EditView
                android:id="@+id/fax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:title="@string/str_fax"
                app:hint="@string/str_fax"
                />
            <com.ziperp.dms.common.model.EditView
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:title="@string/str_email"
                app:hint="@string/str_enter_email"
                />
            <com.ziperp.dms.common.model.EditView
                android:id="@+id/customer_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:title="@string/str_gender"
                app:isMandatory="true"
                app:hint="@string/str_gender"
                />
            <com.ziperp.dms.common.model.EditView
                android:id="@+id/birthday_establish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:title="@string/str_birthday_establish"
                app:isMandatory="true"
                app:hint="@string/str_birthday_establish"
                app:isDateTimePicker="true"
                app:showDivider="false"
                />
            <include
                android:id="@+id/header_address"
                layout="@layout/item_detail_header" />

            <com.ziperp.dms.common.model.EditView
                android:id="@+id/province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:isMandatory="true"
                app:title="@string/str_province"
                app:hint="@string/str_province"
                />

            <com.ziperp.dms.common.model.EditView
                android:id="@+id/district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:title="@string/str_district"
                app:hint="@string/str_district"
                />

            <com.ziperp.dms.common.model.EditView
                android:id="@+id/street_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:isMandatory="true"
                app:title="@string/str_street"
                app:hint="@string/str_street"
                />

            <com.ziperp.dms.common.model.EditView
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:title="@string/str_country"
                app:hint="@string/str_country"
                />
            <TextView
                android:id="@+id/tv_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_black"
                android:background="@color/color_white"
                android:textAllCaps="true"
                android:textSize="15sp"
                android:text="Map Location"
                android:padding="12dp"/>

            <FrameLayout
                android:id="@+id/layout_map"
                android:layout_width="match_parent"
                android:layout_height="250dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/color_text_gray"/>

            <include
                android:id="@+id/tv_addition_info"
                layout="@layout/item_detail_header" />
            <com.ziperp.dms.common.model.EditView
                android:id="@+id/represent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:title="@string/str_representation"
                app:hint="@string/str_representation"
                />
            <com.ziperp.dms.common.model.EditView
                android:id="@+id/license"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:title="@string/str_license"
                app:hint="@string/str_license"
                />
            <com.ziperp.dms.common.model.EditView
                android:id="@+id/tax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:title="@string/str_tax"
                app:hint="@string/str_tax"
                />
            <com.ziperp.dms.common.model.EditView
                android:id="@+id/group1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:title="@string/str_customer_group_1"
                app:hint="@string/str_group"
                />
            <com.ziperp.dms.common.model.EditView
                android:id="@+id/group2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:title="@string/str_customer_group_2"
                app:hint="@string/str_group"
                />
            <com.ziperp.dms.common.model.EditView
                android:id="@+id/group3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:title="@string/str_customer_group_3"
                app:hint="@string/str_group"
                />
            <com.ziperp.dms.common.model.EditView
                android:id="@+id/group4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:title="@string/str_customer_group_4"
                app:hint="@string/str_group"
                />
            <com.ziperp.dms.common.model.EditView
                android:id="@+id/customer_owner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:title="@string/str_owner"
                app:hint="@string/str_owner"
                app:showDivider="false"
                />

            <include
                android:id="@+id/header_description"
                layout="@layout/item_detail_header" />
            <EditText
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="120dp"
                android:background="@drawable/bg_radius_border"
                android:hint="@string/str_description_hint"
                android:gravity="start"
                android:textSize="16sp"
                android:textColor="@color/color_black"
                android:layout_margin="4dp"
                android:paddingTop="12dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingBottom="20dp"
                android:imeOptions="actionDone"/>

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="4dp"
                android:background="@drawable/round_corner_rectangle"
                android:backgroundTint="@color/color_red"
                android:layout_marginBottom="15dp"
                android:drawableLeft="@drawable/ic_delete"
                android:paddingLeft="20sp"
                android:text="@string/str_delete"
                android:textColor="@color/color_white"
                android:paddingRight="20dp"
                android:elevation="5dp"
                android:shadowColor="@color/color_black"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>