<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:navigationIcon="@drawable/ic_action_back"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimary"
        android:fitsSystemWindows="true"
        android:minHeight="?actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nest_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">
        <LinearLayout
            android:id="@+id/items_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.ziperp.dms.common.model.EditView
                android:id="@+id/item_sales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:title="@string/str_item_sales"
                app:isMandatory="true"
                app:hint="@string/str_select_item"
                />
            <com.ziperp.dms.common.model.EditView
                android:id="@+id/sale_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:title="@string/str_sales_unit"
                app:isMandatory="true"
                app:hint="@string/str_select_sales_unit"
                />
            <com.ziperp.dms.common.model.EditView
                android:id="@+id/sale_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:title="@string/str_sales_quantity"
                app:isMandatory="true"
                app:hint="@string/str_select_sales_quantity"
                app:isNumberInput="true"
                />
            <include android:id="@+id/warehouse_unit"
                layout="@layout/item_detail"/>
            <com.ziperp.dms.common.model.EditView
                android:id="@+id/warehouse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:title="@string/str_warehouse"
                app:isMandatory="true"
                app:hint="@string/str_select_warehouse"
                />
            <include android:id="@+id/available_stock"
                layout="@layout/item_detail"/>
            <com.ziperp.dms.common.model.EditView
                android:id="@+id/unit_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:title="@string/str_unit_price"
                app:isMandatory="true"
                app:hint="@string/str_select_unit_price"
                app:isNumberInput="true"
                />
            <RadioGroup
                android:id="@+id/rb_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:background="@color/color_white"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp">
                <RadioButton
                    android:checked="true"
                    android:id="@+id/rb_discount_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_discount_by_rate"
                    android:textSize="16sp"
                    android:layout_weight="1"/>
                <RadioButton
                    android:id="@+id/rb_discount_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_discount_by_amount"
                    android:textSize="16sp"
                    android:layout_weight="1"/>
            </RadioGroup>
            <com.ziperp.dms.common.model.EditView
                android:id="@+id/discount_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:title="@string/str_discount_rate"
                app:hint="@string/str_enter_discount_rate"
                app:isNumberInput="true"
                />
            <com.ziperp.dms.common.model.EditView
                android:id="@+id/discount_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:title="@string/str_discount_amount"
                app:hint="@string/str_enter_discount_amount"
                app:isNumberInput="true"
                />
            <com.ziperp.dms.common.model.EditView
                android:id="@+id/total_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                app:title="@string/str_total_amount"
                app:hint="@string/str_enter_discount_amount"
                />
            <TextView
                android:id="@+id/tv_content_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view2"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="4dp"
                android:text="@string/str_note_content"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>
            <EditText
                android:id="@+id/tv_remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="120dp"
                android:gravity="start"
                android:background="@drawable/bg_radius_border"
                android:textSize="16sp"
                android:textColor="@color/color_black"
                android:layout_margin="4dp"
                android:paddingTop="12dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingBottom="20dp"
                android:imeOptions="actionDone"
                />
            <Button
                android:id="@+id/btn_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/round_corner_rectangle"
                android:backgroundTint="@color/color_red"
                android:layout_marginBottom="15dp"
                android:drawableLeft="@drawable/ic_delete"
                android:paddingLeft="20sp"
                android:text="@string/str_delete"
                android:textColor="@color/color_white"
                android:paddingRight="20dp"
                android:elevation="5dp"
                android:shadowColor="@color/color_black"
                android:visibility="gone"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>